syntax="proto3";
 
package proto;
 
option go_package = "dbservice/dbservice";
 
message User {
   int64 id_user = 1;
   string first_name = 2;
   string last_name = 3;
}
 
message RegUserRequest {
   User user = 1;
}

message UserID {
   int64 id_user = 1;
}
 
message ErrorResponse {
   string error = 1;
}

message BoolResponse {
   bool isreg = 1;
}
 
service RegService {
   rpc RegUser(RegUserRequest) returns (ErrorResponse) {}
   rpc IsRegUser(UserID) returns (BoolResponse) {}
}
